[package]
name = "parse_argument"
version = "0.1.5"
edition = "2021"
description = "A simple way to deal with taking in commandline arguments"
license = "MIT"
repository = "https://github.com/connorm400/parse_arguments_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
